fix layout on mobile

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,9 +1,19 @@
+/* Common */
+a:link, a:visited{
+  text-decoration: none;
+  color: #ff7d65;
+}
+
+/* Round Image */
+
 .image-container{
   width: 250px;
   padding: 10px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+
+  cursor: pointer;
 }
 .image-container img{
   width: 250px;
@@ -15,3 +25,64 @@
 .image-container span{
   font-size: 16pt;
 }
+
+@media screen and (max-width: 768px) {
+  .image-container{
+    width: 150px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .image-container img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  .image-container h1{
+    font-size: 120%;
+  }
+  .image-container span{
+    font-size: 16pt;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .timer div{
+    font-size: 60%;
+    width: 15%;
+  }
+}
+
+/* Timer */
+
+.timer{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+.timer div{
+  display: flex;
+  flex-direction: column;
+  padding: 4em;
+}
+
+@media screen and (max-width: 768px) {
+  .timer div{
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .timer div{
+    font-size: 60%;
+    width: 15%;
+  }
+}
+
+
+
+
+
