--- a/src/pages/section_two/style.css
+++ b/src/pages/section_two/style.css
@@ -1,27 +1,12 @@
-.timer{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-}
-.timer div{
-  display: flex;
-  flex-direction: column;
-  padding: 4em;
-}
-
-
 @media screen and (max-width: 768px) {
   .timer div{
     width: 25%;
   }
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 450px) {
   .timer div{
-    font-size: 70%;
+    font-size: 60%;
     width: 15%;
   }
 }
-
-
